# claude-code-action

./: .gitignore  README.md  __init__.py  action.yml  pyproject.toml  requirements.txt
base_action/: prepare_prompt.py  run_claude.py  setup_claude_code_settings.py
create_prompt/: __init__.py  index.py
entrypoints/: __init__.py  prepare.py
github/data/: fetcher.py
github/operations/comments/: create_initial.py  update_with_branch.py
github/validation/: __init__.py  permissions.py
mcp/: __init__.py
src/claude_code_action/: main.py
src/claude_code_action/base_action/: __main__.py  main.py  run_claude.py  validate_env.py
src/claude_code_action/create_prompt/: types.py
src/claude_code_action/entrypoints/: prepare.py  update_comment_link.py
src/claude_code_action/github/: __init__.py  context.py  token.py
src/claude_code_action/github/api/: __init__.py  client.py  config.py
src/claude_code_action/github/data/: __init__.py  formatter.py
src/claude_code_action/github/operations/: __init__.py  branch.py
src/claude_code_action/github/operations/comments/: __init__.py
src/claude_code_action/github/validation/: actor.py  trigger.py
src/claude_code_action/mcp/: install_mcp_server.py
